# juce-template

./: AGENTS.md  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/resources/: moonbase_api_config.json
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
scripts/: init.sh
